--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ url:       		   "http://dgon-jd.github.io"
 # Owner/author information
 owner:
   name:           Dmitry Goncharenko
-  avatar:         hmfaysal.jpg
+  avatar:         dgon.png
   email:          dmigonvl@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   # description:    Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Doha, Qatar. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
-  description:
+  description:    I’m 2 years experienced iOS developer. Also interested in JavaScript and Python, Reverse Engineering and Unix systems.
   # Social networking links used in footer. Update and remove as you like.
   twitter:        dg0n_dp
   # facebook:       hmfaysal
@@ -53,8 +53,8 @@ links:
     url: /
     external: false
     icon: home
-  - title: <i class="icon-book"></i> Documentation
-    url: /documentation
+  # - title: <i class="icon-book"></i> Documentation
+    # url: /documentation
   - title: Categories
     url: /categories
   - title: Tags
