--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ owner:
   email:          dmigonvl@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   # description:    Hossain Mohammad Faysal is an Electrical Engineer and a Mathematician based in Doha, Qatar. His interests are anything that&#8217;s related to math, from math itself to programming languages to music to physics to engineering to philosophy.
-  description:    I’m 2 years experienced iOS developer. Also interested in JavaScript and Python, Reverse Engineering and Unix systems.
+  description:    Dmitry is 2 years experienced iOS developer. Also interested in JavaScript and Python, Reverse Engineering and Unix systems.
   # Social networking links used in footer. Update and remove as you like.
   twitter:        dg0n_dp
   # facebook:       hmfaysal
@@ -59,8 +59,8 @@ links:
     url: /categories
   - title: Tags
     url: /tags
-  - title: Faysal who?
-    url: /hossain-mohd-faysal
+  # - title: Faysal who?
+    # url: /hossain-mohd-faysal
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Zaporozhye
